@@ -132,6 +132,7 @@ S3method("[", "unit")
 S3method("[", "unit.arithmetic")
 S3method("[", "unit.list")
 S3method("[", "vpPath")
+S3method("[<-", "unit")
 S3method("Ops", "unit")
 S3method("Summary", "unit")
 S3method("as.character", "grob")
